src/objects/Action_Summary__c.object
<CustomObject>
    <description>Provides a summary of Action Plan results</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Duration of the summary in months</description>
        <formula>((year(End_Date__c) - year(Start_Date__c)) * 12 ) + month(End_Date__c) - month(Start_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Finalized_Date__c</fullName>
        <label>Finalized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>New_Version__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Version</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Approval_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allows the Approval process to be bypassed.</description>
        <label>No Approval Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Recommendation__c</fullName>
        <label>Recommendation</label>
        <picklist>
            <picklistValues>
                <fullName>No changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decrease criteria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modify methodology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discontinue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continue informally</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Service_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Assignment</label>
        <referenceTo>Service_Assignment__c</referenceTo>
        <relationshipName>Action_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Final</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disregard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_Check__c</fullName>
        <description>Used to ensure that the Summary covers a unique combination of service assignment, start date and end date.</description>
        <label>Unique Check</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Action Plan Summary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Action Plan Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Action Plan Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>